--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/CODEYA/node-gulp-mode.git"
+    "url": "github.com:CODEYA/node-gulp-mode.git"
   },
   "keywords": [
     "gulp",
