--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "url": "https://github.com/CODEYA/node-gulp-mode/issues"
   },
   "dependencies": {
+    "ansi-colors": "^4.1.1",
+    "fancy-log": "^1.3.3",
+    "gulp-noop": "^1.0.1",
     "gulp-util": "^3.0.8"
   },
   "devDependencies": {
