MISC : ビルド用ライブラリーを 2021/04/07 時点の最新に更新

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ coverage
 # node-waf configuration
 .lock-wscript
 
+# nodenv configuration
+.node-version
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
@@ -28,3 +31,6 @@ node_modules
 
 # Test results
 ./test/junitresults.xml
+
+# Idea
+.idea/
