--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
   "dependencies": {
     "ansi-colors": "^4.1.1",
     "fancy-log": "^1.3.3",
-    "gulp-noop": "^1.0.1",
-    "gulp-util": "^3.0.8"
+    "gulp-noop": "^1.0.1"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-jasmine": "^2.4.2",
-    "gulp-load-plugins": "^1.5.0",
-    "jasmine-reporters": "^2.2.1"
+    "gulp": "^4.0.2",
+    "gulp-jasmine": "^4.0.0",
+    "gulp-load-plugins": "^2.0.6",
+    "jasmine-reporters": "^2.4.0"
   }
 }
